Added put and delete for the cast round endpoints.
