# routes/castsRoute.js
@@ -2,7 +2,9 @@ const castRouter = require("express").Router();
 const controller = require("../controllers/castsFunction");
 
 castRouter.get("/", controller.getall);
-castRouter.post("/", controller.createCastMember);
 castRouter.get("/:fullname", controller.getByName);
+castRouter.post("/", controller.createCastMember);
+castRouter.put("/:id", controller.updateCastmember);
+castRouter.delete("/:id", controller.deleteCastMember);
 
 module.exports = castRouter;
